Fixed overflow for output columns

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,9 +5,18 @@ body.home.index {
     }
   }
 
-  section.output.rendered {
-    code {
-      display: block;
+  section.output {
+    &.raw {
+      pre {
+        overflow: auto;
+      }
+    }
+
+    &.rendered {
+      overflow: auto;
+      code {
+        display: block;
+      }
     }
   }
 }
